[package]
name = "networksetup"
version = "0.1.1"
authors = ["wyhaya <wyhaya@gmail.com>"]
edition = "2021"
license = "MIT"
description = "Change macos system network settings"
readme = "README.md"
homepage = "https://github.com/wyhaya/networksetup"
repository = "https://github.com/wyhaya/networksetup.git"

keywords = [
    "macos",
    "network",
    "system",
    "networksetup"
]

[dependencies]
